# credit-fraud-detection

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: check.yml  ci.yml  lint.yml  pipeline.yml  train.yml
config/: default.yaml  development.yaml  production.yaml
fraud_detection/: main.py  run_mlflow.py
fraud_detection/api/: app.py  schemas.py
fraud_detection/cli/: data.py  inference.py  main.py  promote.py  train.py
fraud_detection/core/: config.py  data_loader.py  inference.py  logger.py  mlflow_handler.py  trainer.py
hooks/: run_pipeline.sh
tests/core/: test_check.py
