[tool.poetry]
name = "credit-fraud-detection"
version = "0.1.0"
description = "Production-ready credit card fraud detection system"
authors = ["yousri maazaoui <yousrimaazaoui@gmail.com>"]
readme = "README.md"
packages = [{include = "fraud_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
lightgbm = "^4.1.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
pydantic = "^2.5.1"
prometheus-client = "^0.18.0"
mlflow = "^2.8.0"
python-dotenv = "^1.0.0"
gunicorn = "^23.0.0"
types-pyyaml = "^6.0.12.20240917"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
flake8-quotes = "^3.4.0"
flake8-bugbear = "^24.10.31"
types-pyyaml = "^6.0.12.20240917"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
